--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Custom color variables */
+  --color-purple: #a97cd7;
+  --color-green: #9acfb0;
+}
+
+/* Common button styles */
+.button-with-underline {
+  border: 2px solid black;
+  box-shadow: 4px 4px 0px black;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  background-color: white;
+  color: black;
 }
 
 a {
@@ -20,6 +35,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: var(--color-purple);
 }
 
 h1 {
@@ -46,7 +62,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: var(--color-purple);
   }
   a:hover {
     color: #747bff;
