--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,13 @@
   padding: 0.5rem 1rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  background-color: white;
   color: black;
+}
+
+.div-3d-with-shadow {
+  box-shadow: 4px 4px 0px black;
+  border-radius: 4px;
+  border: 1px solid black;
 }
 
 a {
