--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   -moz-osx-font-smoothing: grayscale;
 
   /* Custom color variables */
-  --color-purple: #a97cd7;
+  --color-purple: #6f6693;
   --color-green: #9acfb0;
 }
 
@@ -27,6 +27,7 @@
   box-shadow: 4px 4px 0px black;
   border-radius: 4px;
   border: 1px solid black;
+  background-color: rgba(165, 206, 178, 0.6);
 }
 
 a {
