--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,11 @@
 
 .page-container {
   min-height: 100vh;
+  padding: 0 2%;
 }
 
 .debug {
   border: 1px solid red;
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 @media (prefers-reduced-motion: no-preference) {
