--- a/src/editor/EditorGroup.css
+++ b/src/editor/EditorGroup.css
@@ -52,12 +52,6 @@
   background-color: #f5f5f5;
 }
 
-.editor-group-item-content {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
 .editor-group-color-box {
   width: 20px;
   height: 20px;
@@ -117,7 +111,7 @@
 }
 
 .editor-group-save-form-button {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   border: none;
   padding: 10px 20px;
