--- a/src/index.css
+++ b/src/index.css
@@ -32,9 +32,9 @@
 }
 
 .div-3d-with-shadow {
-  box-shadow: 4px 4px 0px black;
+  box-shadow: 0px 4px 0px rgb(52, 11, 86), 0 0 20px rgba(52, 11, 86, 0.6);
+  border: 1px solid rgb(68, 172, 137);
   border-radius: 4px;
-  border: 1px solid black;
   background-color: rgba(165, 206, 178, 0.6);
 }
 
