--- a/src/common-components/ImageWithInfoMany.css
+++ b/src/common-components/ImageWithInfoMany.css
@@ -31,13 +31,9 @@
 
 .embla-many__button {
   position: absolute;
-  top: 50%;
+  top: 20px;
   transform: translateY(-50%);
   z-index: 1;
-  background: rgba(0, 0, 0, 0.6);
-  color: white;
-  border: none;
-  border-radius: 50%;
   width: 40px;
   height: 40px;
   display: flex;
@@ -46,10 +42,6 @@
   font-size: 18px;
   cursor: pointer;
   transition: background-color 0.2s ease;
-}
-
-.embla-many__button:hover {
-  background: rgba(0, 0, 0, 0.8);
 }
 
 .embla-many__button:disabled {
@@ -78,11 +70,11 @@
   .embla-many__slide {
     padding-left: 0.5rem;
   }
-  
+
   .embla-many__container {
     margin-left: calc(0.5rem * -1);
   }
-  
+
   .embla-many__buttons {
     gap: 0.5rem;
   }
