--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@
   background-color: rgba(165, 206, 178, 0.6);
 }
 
+.div-3d-no-shadow {
+  box-shadow: 0px 4px 0px rgb(52, 11, 86);
+  border: 1px solid rgb(68, 172, 137);
+  border-radius: 4px;
+  background-color: rgba(165, 206, 178, 0.6);
+}
+
 a {
   font-weight: 500;
   text-decoration: inherit;
