--- a/src/page-detail/PageDetail.css
+++ b/src/page-detail/PageDetail.css
@@ -161,14 +161,45 @@
 }
 
 .detail-section-header {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0px;
   margin: 10px auto;
   width: 50%;
+  position: relative;
 }
 
 .detail-section-header h2 {
   margin: 0;
+}
+
+.section-nav-button {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  border: none;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.1);
+  color: #333;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.2s ease;
+}
+
+.section-nav-button:hover {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.section-nav-button--left {
+  left: -50px;
+}
+
+.section-nav-button--right {
+  right: -50px;
 }
 
 .detail-section-content {
