--- a/src/page-oc-list/OcGroup.css
+++ b/src/page-oc-list/OcGroup.css
@@ -6,10 +6,10 @@
 .group-header {
   display: block;
   align-items: center;
-  background-color: transparent;
   margin: 0 auto;
   padding: 0;
   width: 70%;
+  border: none;
 }
 
 .group-info {
