Edit margin list

--- a/src/page-oc-list/OcGroup.css
+++ b/src/page-oc-list/OcGroup.css
@@ -1,5 +1,6 @@
 /* Group layout */
 .oc-group {
+  margin-top: 10px;
   margin-bottom: 2rem;
 }
 
@@ -26,4 +27,5 @@
 .oc-group-grid {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 10px;
 }
