--- a/src/page-oc-list/OcSlot.css
+++ b/src/page-oc-list/OcSlot.css
@@ -5,7 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   margin: 10px;
 }
 
@@ -22,5 +21,5 @@
 
 h3 {
   margin: 0;
-  font-size: 12px;
+  font-size: 1rem;
 }
