--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: var(--font-primary);
   font-size: 0.7rem;
   line-height: 1.5;
   font-weight: 400;
@@ -12,6 +12,11 @@
   /* Custom color variables */
   --color-purple: #6f6693;
   --color-green: #9acfb0;
+
+  /* Font variables */
+  --font-primary: "Playpen Sans", system-ui, sans-serif;
+  --font-headers: "Rowdies", "Impact", "Arial Black", sans-serif;
+  --font-secondary: "Arial", sans-serif;
 }
 
 /* Desktop font size */
@@ -62,6 +67,15 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: var(--font-headers);
+}
+
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-headers);
 }
 
 @media (prefers-color-scheme: light) {
