--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,7 @@
   --color-green: #9acfb0;
 
   /* Font variables */
-  --font-primary: "Playpen Sans", system-ui, sans-serif;
-  --font-headers: "Rowdies", "Impact", "Arial Black", sans-serif;
+  --font-primary: "Comic Relief", "Comic Sans MS", "Chalkboard SE", cursive;
   --font-secondary: "Arial", sans-serif;
 }
 
@@ -67,7 +66,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  font-family: var(--font-headers);
+  font-weight: bold;
 }
 
 h2,
@@ -75,7 +74,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-headers);
+  font-weight: bold;
 }
 
 @media (prefers-color-scheme: light) {
