Change sparkle background color

--- a/src/background-sparkle/sparkles.css
+++ b/src/background-sparkle/sparkles.css
@@ -1,5 +1,5 @@
 .particle {
-  background-color: GhostWhite;
+  background-color: #f3e9ff;
   border-radius: 50%;
   box-shadow: 0 0 var(--blur) var(--spread) rgba(255, 255, 224, 0.5);
   height: var(--size);
