--- a/src/background-sparkle/sparkles.css
+++ b/src/background-sparkle/sparkles.css
@@ -1,21 +1,13 @@
 .particle {
   background-color: #f3e9ff;
-  clip-path: polygon(
-    50% 0%,
-    60% 40%,
-    100% 50%,
-    60% 60%,
-    50% 100%,
-    40% 60%,
-    0% 50%,
-    40% 40%
-  );
+  clip-path: polygon(50% 0%, 60% 40%, 100% 50%, 60% 60%, 50% 100%, 40% 60%, 0% 50%, 40% 40%);
   box-shadow: 0 0 var(--blur) var(--spread) rgba(255, 255, 224, 0.5);
   height: var(--size);
   left: var(--left);
-  position: absolute;
+  position: fixed;
   top: var(--top);
   width: var(--size);
+  z-index: -1;
   animation: sparkle var(--duration) var(--iteration) alternate;
   pointer-events: none;
 }
