--- a/src/page-oc-list/OcSlot.css
+++ b/src/page-oc-list/OcSlot.css
@@ -1,7 +1,8 @@
 /* Slot layout */
 .oc-slot {
-  width: 150px;
-  height: 160px;
+  width: 80%;
+  margin: 10 auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
