--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   /* Custom color variables */
   --color-purple: #6f6693;
   --color-green: #9acfb0;
+  --color-white-sparkle: #f3e9ff;
 
   /* Font variables */
   --font-primary: "Comic Relief", "Comic Sans MS", "Chalkboard SE", cursive;
