--- a/src/page-oc-list/OcSlot.css
+++ b/src/page-oc-list/OcSlot.css
@@ -1,19 +1,22 @@
 /* Slot layout */
 .oc-slot {
   width: 80%;
-  margin: 10 auto;
-  height: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 10px;
 }
 
 .oc-avatar {
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1;
   object-fit: cover;
   border-radius: 8px;
+}
+
+.oc-slot-name-box {
+  width: 100%;
+  background-color: var(--color-white-sparkle);
 }
 
 .oc-name {
