--- a/src/page-oc-list/OcGroup.css
+++ b/src/page-oc-list/OcGroup.css
@@ -11,7 +11,7 @@
   align-items: center;
   margin: 0 auto;
   padding: 0;
-  width: 40%;
+  width: 100%;
   border: none;
 }
 
@@ -40,5 +40,9 @@
 @media (min-width: 768px) {
   .oc-group-grid {
     grid-template-columns: repeat(5, 1fr);
+  }
+
+  .group-header {
+    width: 40%;
   }
 }
