--- a/src/common-components/LoadingSpinner.css
+++ b/src/common-components/LoadingSpinner.css
@@ -8,46 +8,16 @@
   position: absolute;
   top: 0;
   left: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: var(--color-purple);
+  opacity: 0.7;
   z-index: 5;
-}
-
-.loading-spinner {
-  border-radius: 50%;
-  border-style: solid;
-  border-color: #e0e0e0;
-  border-top-color: #4CAF50;
-  animation: spin 1s linear infinite;
-}
-
-.loading-spinner--small {
-  width: 20px;
-  height: 20px;
-  border-width: 2px;
-}
-
-.loading-spinner--medium {
-  width: 40px;
-  height: 40px;
-  border-width: 4px;
-}
-
-.loading-spinner--large {
-  width: 60px;
-  height: 60px;
-  border-width: 6px;
 }
 
 .loading-spinner-message {
   margin-top: 16px;
   font-size: 14px;
-  color: #666;
+  color: var(--color-white-sparkle);
   text-align: center;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
 }
 
 .loading-spinner-container--small .loading-spinner-message {
@@ -58,4 +28,32 @@
 .loading-spinner-container--large .loading-spinner-message {
   font-size: 16px;
   margin-top: 20px;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  --b: 12px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  padding: 1px;
+  background: conic-gradient(#0000 10%, var(--color-green)) content-box;
+  -webkit-mask: repeating-conic-gradient(
+      #0000 0deg,
+      #000 1deg 15deg,
+      #0000 16deg 30deg
+    ),
+    radial-gradient(
+      farthest-side,
+      #0000 calc(100% - var(--b) - 1px),
+      #000 calc(100% - var(--b))
+    );
+  -webkit-mask-composite: destination-in;
+  mask-composite: intersect;
+  animation: l4 1s infinite steps(12);
+}
+@keyframes l4 {
+  to {
+    transform: rotate(1turn);
+  }
 }
