Change loader retro aesthetic

--- a/src/common-components/LoadingSpinner.css
+++ b/src/common-components/LoadingSpinner.css
@@ -30,30 +30,38 @@
   margin-top: 20px;
 }
 
-/* HTML: <div class="loader"></div> */
 .loader {
   width: 50px;
-  --b: 12px;
   aspect-ratio: 1;
+  display: grid;
   border-radius: 50%;
-  padding: 1px;
-  background: conic-gradient(#0000 10%, var(--color-green)) content-box;
-  -webkit-mask: repeating-conic-gradient(
-      #0000 0deg,
-      #000 1deg 15deg,
-      #0000 16deg 30deg
-    ),
-    radial-gradient(
-      farthest-side,
-      #0000 calc(100% - var(--b) - 1px),
-      #000 calc(100% - var(--b))
-    );
-  -webkit-mask-composite: destination-in;
-  mask-composite: intersect;
-  animation: l4 1s infinite steps(12);
+  background: linear-gradient(
+        0deg,
+        rgb(0 0 0/50%) 30%,
+        #0000 0 70%,
+        rgb(0 0 0/100%) 0
+      )
+      50%/8% 100%,
+    linear-gradient(90deg, rgb(0 0 0/25%) 30%, #0000 0 70%, rgb(0 0 0/75%) 0)
+      50%/100% 8%;
+  background-repeat: no-repeat;
+  animation: l23 1s infinite steps(12);
 }
-@keyframes l4 {
-  to {
+.loader::before,
+.loader::after {
+  content: "";
+  grid-area: 1/1;
+  border-radius: 50%;
+  background: inherit;
+  opacity: 0.915;
+  transform: rotate(30deg);
+}
+.loader::after {
+  opacity: 0.83;
+  transform: rotate(60deg);
+}
+@keyframes l23 {
+  100% {
     transform: rotate(1turn);
   }
 }
