--- a/src/editor/EditorOc.css
+++ b/src/editor/EditorOc.css
@@ -254,3 +254,22 @@
   margin: 0;
   color: #333;
 }
+
+.editor-oc-gallery-controls {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.editor-oc-gallery-drag-handle {
+  cursor: grab;
+  padding: 0 8px;
+  user-select: none;
+  color: #666;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.editor-oc-gallery-drag-handle:active {
+  cursor: grabbing;
+}
