Switch form button

--- a/src/page-detail/PageDetail.css
+++ b/src/page-detail/PageDetail.css
@@ -139,7 +139,7 @@
 .oc-detail-tag {
   display: inline-block;
   padding: 3px 3px;
-  margin: 1% 1%;
+  margin: 5px;
 }
 
 /* Small devices and down (mobile phones) */
