--- a/src/common-components/ImageSlide.css
+++ b/src/common-components/ImageSlide.css
@@ -30,3 +30,12 @@
   opacity: 0.3;
   cursor: not-allowed;
 }
+
+.carousel-indicator {
+  font-size: 0.9rem;
+  color: #666;
+  min-width: 4rem;
+  text-align: center;
+  margin-top: 0.5rem;
+  display: block;
+}
