--- a/src/common-components/ImageWithInfo.css
+++ b/src/common-components/ImageWithInfo.css
@@ -25,3 +25,20 @@
   text-align: center;
   margin: 0 0 10px 0;
 }
+
+.youtube-embed-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  overflow: hidden;
+}
+
+.youtube-embed-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
