Random interval time switch between avatar slideshow in list

--- a/src/common-components/AvatarSlideshow.css
+++ b/src/common-components/AvatarSlideshow.css
@@ -1,6 +1,6 @@
 /* AvatarSlideshow inherits styling from whatever className is passed to it */
-/* Fading effect for avatar transitions */
+/* Softer fading effect for avatar transitions */
 .avatar-slideshow-fade {
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.8s ease-in-out;
 }
